beta/style.css
@font-face {
    font-family: 'Montserrat';
        src: url('https://res.eban.dev/font/montserrat.otf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto';
        src: url('https://res.eban.dev/font/roboto.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
        src: url('https://res.eban.dev/font/poppins.ttf');
    font-weight: normal;
    font-style: normal;
}

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: #fff;
}

html{
  scroll-behavior: smooth;
}

body{
  background: #141429;
}

#pane{
  display: none;
  position: fixed;
  background: #111;
  height: 100%;
  width: 0%;
  border-radius: 25px 0px 0px 25px;
  right: 0;
  z-index: 10;
  box-shadow: 10px 10px 5px 2000px rgba(0,0,0,0.5);
  padding: 20px;
  transition: 1s;
  opacity: 0;
}

#pane h4{
  font-size: 25px;
  font-family: Poppins;
  padding: 10px;
}

#pane a{
  font-size: 15px;
  font-family: Roboto;
  padding-left: 10px;
}

#pane .flag_container{
  position: fixed;
  bottom: 30px;
  display: flex;
  justify-content: space-around;
  width: 16%;
  margin-left: 1%;
}

#pane .flag{
  border-radius: 12px;
  width: 55px;
  cursor: pointer;
}

header .icon{
  width: 75px;
  margin: 30px;
}

.menu_icon{
  width: 35px;
  margin: 50px;
  right: 0;
  cursor: pointer;
  z-index: 11;
  position: absolute;
}

header h1{
  font-family: Montserrat;
  margin-bottom: 10px;
  font-size: 60px;
}

header p{
  font-family: Roboto;
  margin-top: 25px;
  font-size: 17px;
  font-weight: lighter;
}

header .red_line_1, header .red_line_2{
  width: 60px;
  height: 3px;
  background-color: #D83D3D;
  border-radius: 100px;
}

header .red_line_2{
  margin-top: 7px;
  margin-left: 35px;
}

header .desc_box{
  width: 20%;
  margin-left: 18%;
  margin-top: 10%;
  height: 30%;
}

header .illus{
  float: right;
  margin-top: -14.5%;
  width: 18%;
  margin-right: 18%;
  opacity: 80%;
}

header .scroll{
  width: 30px;
  margin-left: calc(50% - 30px);
  margin-top: 160px;
}

.scroll-downs {
  margin-left: 50%;
  transform: translate(-50%, 0%);
  margin-top: 130px;
  width: 30px;
  height: 72px;
  cursor: pointer;
}

.mousey {
  width: 3px;
  padding: 7px 13px;
  height: 35px;
  border: 2px solid #fff;
  border-radius: 25px;
  opacity: 0.75;
  box-sizing: content-box;
}

.scroller {
  width: 3px;
  height: 10px;
  border-radius: 25%;
  background-color: #fff;
  animation-name: scroll;
  animation-duration: 2.2s;
  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
  animation-iteration-count: infinite;
}

@keyframes scroll {
  0% { opacity: 0; }
  10% { transform: translateY(0); opacity: 1; }
  100% { transform: translateY(15px); opacity: 0;}
}

main{
  display: flex;
  justify-content: space-between;
  max-width: 100vw;
  width: 60%;
  margin-left: 20%;
  margin-top: 100px;
}

main .card{
  width: 25vw;
  background: #0B0A12;
  border-radius: 10px;
  padding: 30px;
  margin-bottom: 50px;
}

main .card h4{
  font-size: 25px;
  font-family: Montserrat;
  text-align: center;
}

main .card p{
  font-size: 15px;
  font-family: Roboto;
  margin-top: 20px;
}

main .card .btn{
  background: #252D52;
  padding: 13px 19px;
  border-radius: 25px;
  font-family: Roboto;
  text-decoration: none;
  margin-left: 50%;
  transform: translate(-50%, 0%);
  display: block;
  width: 87px;
  margin-top: 25px;
}

@media only screen and (max-width: 800px) {
  .illus{
    display: none;
  }
  .desc_box{
    width: 50% !important;
    margin-left: 25% !important;
  }
  .card_line{
    width: 100%;
  }
  main .card{
    width: 100%;
  }
  main{
    width: 65vw;
    margin-left: 17.5%;
    display: block;
  }
  main .card .btn{
    width: 87px;
  }
  #pane .flag_container{
    width: 58%;
  }

  #pane .flag{
    width: 50px;
  }
}

